--- a/static/global.css
+++ b/static/global.css
@@ -1,16 +1,13 @@
-.scrollhost::-webkit-scrollbar {
-    display: none;
-  }
   
-  .scrollhost ::-moz-scrollbar {
-    display: none;
-   
+  /* These two classes remove the scrollbar */
+  html {
+      overflow-y: scroll;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none;  /* Internet Explorer 10+ */
   }
-  
-  .scrollhost {
-    overflow: auto;
-    -ms-overflow-style: none;
-    scrollbar-color: transparent transparent; /*just hides the scrollbar for firefox */
+  html::-webkit-scrollbar { /* WebKit */
+      width: 0;
+      height: 0;
   }
 
   html {
